@@ -1,5 +1,15 @@
 2005-03-24  Tom Tromey  <tromey@redhat.com>
 
+	* builtins.cc (map_type): Call pushdecl.
+	(map_class_object): Likewise.
+	(add): Likewise.
+	* hooks.hh (pushdecl): Declare.
+	(all_decls): Declare.
+	* decl.cc (pushdecl): No longer static.
+	(all_decls): Updated comment.
+
+2005-03-24  Tom Tromey  <tromey@redhat.com>
+
 	* tree.cc (visit_cast): Use convert and not fold_convert.
 
 2005-03-24  Tom Tromey  <tromey@redhat.com>
